responsive adjustment for large monitors

--- a/architecture/index.html
+++ b/architecture/index.html
@@ -145,41 +145,6 @@
       design and technical solutions based on design research and studio requirements.</div>
   </div>
 
-  <div class="body-landing">
-    <div class="body-intro">
-      <div class="t-hello" id="t-hello-1550">HELLO, </div>
-    </div>
-    <div class="body-intro" data-aos="fade-up">
-      <div class="column">
-        <div class="t-hi">I'm Vicky.</div>
-      </div>
-      <p class="divider"></p>
-      <div class="column alignCPH">
-        <span class="t-me t-me-1">selected academic projects
-        </span>
-
-        <div class="row">
-          <span class="t-me"> architecture </span>
-          <span class="divider1"></span>
-          <div class="t-me"> design </div>
-        </div>
-
-      </div>
-    </div>
-    <p class="t-intro z-index-top">
-      Most of the projects are from my three-year Master of Architecture program. Our main focuses
-      were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
-      material, tectonic, social, technological, and environmental determinants of building form.
-      the penultimate studio incorporate integrative thinking that shapes complex architectural
-      design and technical solutions based on design research and studio requirements.</p>
-  </div>
-
-
-
-
-
-
-
 
   <div class="body-h">
     <p class="vertical-line ver1"></p>
@@ -187,14 +152,11 @@
 
   <!--architecture 1-->
   <div id="ytrigger-arch">
-    <div class="body-h" id="ytrigger-arch">
-      <div class="body-left body-img float">
-        <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
-
-      </div>
+    <div class="row-change marginAll center-h center-v">
+      <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./recreation_commons">
           RECREATION COMMONS </a>
         </p>
@@ -211,12 +173,13 @@
   </div>
 
   <!--architecture 1-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--architecture 2-->
   <div id="ytrigger-arch2">
-    <div class="body-h">
-      <div class="body-left body-txt">
+    <div class="row-change marginAll center-h center-v row-changeRV">
+
+      <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
         <p class="horizontal-line"></p>
         <p class="t-text-m">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017 </p>
@@ -225,26 +188,20 @@
         <p class="t-text-m">7500 square metres approx. </p>
         <p class="t-text-m">Maximum Built Area: 4000 square metres </p>
       </div>
-
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-img float">
-        <a href="./narrow_stripes/"> <img class="shadowAll" src="./ar_02.jpg"> </a>
-      </div>
+      <a href="./narrow_stripes/"> <img class="shadowAll" src="./ar_02.jpg"> </a>
     </div>
   </div>
   <!--architecture 2-->
-  <div class="blank-lineheight-xl"></div>
-  <!--THESIS -->
+  <div class="blankHXL"></div>
+  <!--THESIS 3-->
   <div id="ytrigger-arch3">
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
-
-      </div>
+    <div class="row-change marginAll center-h center-v">
+      <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./thesis_studio/">ON ORDER: DIFFERENTIATED
           CONTINUITY OF
           OBJECTS
@@ -257,38 +214,37 @@
       </div>
     </div>
   </div>
-  <!--THESIS -->
-  <div class="blank-lineheight-xl"></div>
-  <!--MANIFOLD GROUND -->
-  <div class="body-h" id="ytrigger-arch4">
-    <div class="body-left body-txt">
-      <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
-      <p class="horizontal-line"></p>
-      <p class="t-text-m">[IN]ARCH ADV, SUMMERS 2014 </p>
-      <p class="t-text-m">Summer Program, CED, UC Berkeley </p>
-      <p class="t-text-m">Instructor: Keith Plymale </p>
-      <p class="t-text-m">Duration: One Semester</p>
-      <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102 </p>
-    </div>
-    <div class="vertical-line-blank">
-    </div>
-    <div class="body-right body-img float">
-      <a class="t-title" href="./manifold_ground/"> <img class="shadowAll" src="./ar_04.jpg"></a>
-    </div>
-  </div>
-  <!--MANIFOLD GROUND -->
-  <div class="blank-lineheight-xl"></div>
-
-  <!--architecture 3-->
-  <div id="ytrigger-arch5">
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
-            src="./ar_03.jpg"></a>
+  <!--THESIS 3-->
+  <div class="blankHXL"></div>
+  <!--MANIFOLD GROUND 4-->
+  <div id="ytrigger-arch4">
+    <div class="row-change marginAll center-h center-v row-changeRV">
+      <div class="column widthM">
+        <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">[IN]ARCH ADV, SUMMERS 2014 </p>
+        <p class="t-text-m">Summer Program, CED, UC Berkeley </p>
+        <p class="t-text-m">Instructor: Keith Plymale </p>
+        <p class="t-text-m">Duration: One Semester</p>
+        <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102 </p>
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <a class="t-title" href="./manifold_ground/"> <img class="shadowAll" src="./ar_04.jpg"></a>
+    </div>
+  </div>
+  <!--MANIFOLD GROUND 4-->
+  <div class="blankHXL"></div>
+
+  <!--RECOVERY OF RIVER EDGES 5-->
+  <div id="ytrigger-arch5">
+
+    <div class="row-change marginAll center-h center-v">
+      <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
+          src="./ar_03.jpg"></a>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./recovery_of_river_edges/"> RECOVERY OF
           RIVER EDGES </a>
         <p class="horizontal-line"></p>
@@ -301,12 +257,13 @@
       </div>
     </div>
   </div>
-  <!--architecture 3-->
-  <div class="blank-lineheight-xl"></div>
-  <!--CURVES-->
+  <!--RECOVERY OF RIVER EDGES 5 -->
+  <div class="blankHXL"></div>
+  <!--CURVES 6-->
   <div id="ytrigger-arch6">
-    <div class="body-h">
-      <div class="body-left body-txt">
+    <div class="row-change marginAll center-h center-v row-changeRV">
+
+      <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
           CURVES </a>
         <p class="horizontal-line"></p>
@@ -317,23 +274,20 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-img float">
-        <a class="t-title-l" href="./the_rotation_of_curves/"> <img class="shadowAll"
-            src="./ar_05.jpg"></a>
-      </div>
-    </div>
+      <a class="t-title-l" href="./the_rotation_of_curves/"> <img class="shadowAll"
+        src="./ar_05.jpg"></a>    </div>
+
   </div>
-  <!--CURVES-->
-  <div class="blank-lineheight-xl"></div>
-  <!--LACMA-->
+  <!--CURVES 6-->
+  <div class="blankHXL"></div>
+  <!--LACMA 7-->
   <div id="ytrigger-arch7">
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <a class="t-title-l" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
-      </div>
+
+    <div class="row-change marginAll center-h center-v">
+      <a class="t-title-l" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./LACAMA/">LACMA</a>
         <p class="horizontal-line"></p>
         <p class="t-text-m">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016 </p>
@@ -342,15 +296,16 @@
       </div>
     </div>
   </div>
-  <!-- LACMA-->
-  <div class="blank-lineheight-xl"></div>
+  <!-- LACMA 7-->
+  <div class="blankHXL"></div>
 
 
 
-  <!--architecture 6-->
+  <!--architecture 8-->
   <div id="ytrigger-arch8">
-    <div class="body-h">
-      <div class="body-left body-txt">
+    <div class="row-change marginAll center-h center-v row-changeRV">
+
+      <div class="column widthM">
         <p class="t-title-l" data-aos="fade-up">KAPPE HOUSE STUDY </p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
@@ -360,15 +315,13 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-img float">
-        <img src="./ar_06.jpg">
-      </div>
+      <img src="./ar_06.jpg">
     </div>
   </div>
 
-  <!--architecture 6-->
+  <!--architecture 8-->
 
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
 
   <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
@@ -383,7 +336,7 @@
 
 
   <!--footer-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
   <!--back to top-->
   <button id="myBtn" class=" myBtn-1550" title="Go to top">
