--- a/project/index.html
+++ b/project/index.html
@@ -141,8 +141,9 @@
     </div>
 
     <div class="t-intro z-index-top" data-aos="fade-up">
-      Some of the apps I have designed recently, I built this website myself from scratch using
-      HTML/CSS/JS deployed on AWS.</div>
+      I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS. Some of
+      the apps I have designed recently. Currently attending Google UX Certificate courses more
+      projects coming soon. Any improvements or advice would be greatly appreciated.</div>
   </div>
   <div class="blank-lineheight-m"></div>
 
@@ -153,23 +154,21 @@
     <p class="vertical-line ver1"></p>
   </div>
   <!-- content-->
-  <div class="row marginInner item-height-m center-v">
+  <div class="row marginAll item-height-m center-v marginAll1920">
     <p class="tArrow"> Selected Projects </p>
     <img class="se-arrow" src="../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
-  <div class="blankHL"></div>
   <!--MEAL PLANNER-->
   <div id="ytrigger3">
 
-    <div class="row center-v center-h marginAll">
-      <div class="float">
-        <a href="/project/meal_planner">
-          <img src="../layout_mealplanner.png" alt="Meal Planner">
-        </a>
+    <div class="row-change marginAll marginAll1920 center-h center-v">
+      <a href="/project/meal_planner">
+        <img src="../layout_mealplanner.png" alt="Meal Planner">
+      </a>
+      <div class="vertical-line-blank">
       </div>
-
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <a href="/project/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
         <p class="horizontal-line"></p>
         <p class="t-text-m">A mobile app helps planning a healthy meal</p>
@@ -181,22 +180,19 @@
   <div class="blankHL"></div>
   <!--GARDENERS HUB-->
   <div id="ytrigger4">
-    <div class="row center-v center-h marginAll">
 
-
-      <div class="column">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+      <div class="column widthM">
         <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
         <p class="horizontal-line"></p>
         <p class="t-text-m">A marketplace for local community</p>
         <p class="t-text-m">May 2021 - August 2021</p>
       </div>
-      <div class="vertical-line-blank"></div>
-
-      <div class="body-left float">
-        <a href="/project/gardeners_hub">
-          <img class="widthXL" src="../layout_gardenershub.png" alt="Gardeners' Hub">
-        </a>
+      <div class="vertical-line-blank">
       </div>
+      <a href="/project/gardeners_hub">
+        <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
+      </a>
     </div>
   </div>
   <!--GARDENERS HUB-->
@@ -205,15 +201,15 @@
 
   <!--APPOINTMENTMAKER-->
   <div id="ytrigger">
-    <div class="row center-v center-h marginAll">
-      <div class="float">
-        <a href="/project/appointment_maker">
-          <img class="widthXL" src="../layout_AppointmentMaker.png" alt="Appointment Maker">
-        </a>
-      </div>
-      <div class="vertical-line-blank"></div>
 
-      <div class="column">
+
+    <div class="row-change marginAll marginAll1920 center-h center-v">
+      <a href="/project/appointment_maker">
+        <img src="../layout_AppointmentMaker.png" alt="Appointment Maker">
+      </a>
+      <div class="vertical-line-blank">
+      </div>
+      <div class="column widthM">
         <a href="/project/appointment_maker" class="t-title-l" data-aos="fade-up">Appointment
           Maker</a>
         <p class="horizontal-line"></p>
@@ -222,7 +218,6 @@
           makers</p>
         <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
         <p class="t-text-m">Coming Soon</p>
-
       </div>
     </div>
   </div>
@@ -233,9 +228,10 @@
   <div id="ytrigger1">
 
 
-    <div class="row center-v center-h marginAll">
 
-      <div class="column">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
+
+      <div class="column widthM">
         <p href="/project/indie" class="t-title-l" data-aos="fade-up">Indie Rock bands Website</p>
         <p class="horizontal-line"></p>
         <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 2</p>
@@ -244,15 +240,11 @@
         <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
         <p class="t-text-m">Coming Soon</p>
       </div>
-      <div class="vertical-line-blank"></div>
-
-
-      <div class="float">
-        <p href="/project/indie">
-          <img class="widthXL" src="../layout_IndieRockbands.png" alt="Meal Planner">
-        </p>
+      <div class="vertical-line-blank">
       </div>
-
+      <p href="/project/indie">
+        <img src="../layout_IndieRockbands.png" alt="Meal Planner">
+      </p>
     </div>
   </div>
   <!--Responsive Web-->
@@ -261,16 +253,10 @@
   <!--Social Good-->
   <div id="ytrigger2">
 
-    <div class="row center-v marginAll">
 
-      <div class="float">
-        <p href="/project/meal_planner">
-          <img class="widthXL" src="../layout_MedicationReminder.png" alt="Meal Planner">
-        </p>
-      </div>
-      <div class="vertical-line-blank"></div>
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
-      <div class="column">
+      <div class="column widthM">
         <p href="/project/meal_planner" class="t-title-l" data-aos="fade-up">Medication Reminder</p>
         <p class="horizontal-line"></p>
         <p class="t-text-s"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 3</p>
@@ -279,17 +265,24 @@
         <p class="t-text-s"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
         <p class="t-text-m">Coming Soon</p>
       </div>
+      <div class="vertical-line-blank">
+      </div>
+      <p href="/project/meal_planner">
+        <img src="../layout_MedicationReminder.png" alt="Meal Planner">
+      </p>
     </div>
+
   </div>
   <!--Social Good-->
-  <div class="blankHL"></div>
+  <div class="blankHL"></div>  <div class="blankHL"></div>
 
-  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day!  </p>
+
+  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
   <p class="t-text-m center-h" data-aos="fade-up">More coming soon</p>
 
 
 
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
 
 
 
