MP media query update

--- a/photography/index.html
+++ b/photography/index.html
@@ -147,7 +147,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 1-->
   <div id="ytrigger-pg">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./01.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -166,7 +166,7 @@ Interested in what you see? Shoot me an email :) " />
 
 
   <div id="ytrigger-pg2">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
@@ -186,7 +186,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 3-->
   <div id="ytrigger-pg3">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./03.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -205,7 +205,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <div id="ytrigger-pg4">
 
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
@@ -226,7 +226,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 5-->
   <div id="ytrigger-pg5">
 
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./05.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -243,7 +243,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 6-->
   <div id="ytrigger-pg6">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
@@ -261,7 +261,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 7-->
   <div id="ytrigger-pg7">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./07.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -279,7 +279,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 8-->
   <div id="ytrigger-pg8">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
@@ -298,7 +298,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 9-->
   <div id="ytrigger-pg9">
 
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./09.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -315,7 +315,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 10-->
   <div id="ytrigger-pg10">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
@@ -333,7 +333,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 11-->
   <div id="ytrigger-pg11">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./11.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -352,7 +352,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <div id="ytrigger-pg12">
 
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
@@ -373,7 +373,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 13-->
   <div id="ytrigger-pg13">
 
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./13.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -391,7 +391,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 14-->
   <div id="ytrigger-pg14">
 
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
@@ -410,7 +410,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 15-->
   <div id="ytrigger-pg15">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./15.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -428,7 +428,7 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 16-->
   <div id="ytrigger-pg16">
 
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l">Taos Pueblo Indian Reservation</p>
@@ -448,7 +448,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 17-->
   <div id="ytrigger-pg17">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <img class="float shadowAll" src="./17.jpg">
       <div class="vertical-line-blank">
       </div>
@@ -465,7 +465,7 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 18-->
   <div id="ytrigger-pg18">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l">Yellowstone National Park</p>
