--- a/project/appointment_maker/index.html
+++ b/project/appointment_maker/index.html
@@ -115,9 +115,10 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
+  <div class="blankPHONE"></div>
+
 
   <!--about appointmentmaker-->
-  <div class="blankPHONE"></div>
 
   <div class="bgColorAM">
     <div class="column center-v">
@@ -584,17 +585,67 @@
       </table>
 
     </div>
+  </div>
+  <div class="blankHL"></div>
+
+  <div class="column center-v marginAll marginAll1920">
+    <P class="t-title-m">Competitive audit</P>
+    <div class="row center-v">
+      <div class="widthM">
+        <P class="t-title-s align-right">General information</P>
+        <P class="t-title-s align-right">UX Design</P>
+
+      </div>
+      <div class="vertical-line"></div>
+      <div class=" columnNon widthM">
+        <P class="t-text-s"> Outline the competitive audit goals</P>
+        <P class="t-text-s"> Identify competitors </P>
+        <P class="t-text-s"> Add competitor information</P>
+        <P class="t-text-s"> Add research findings</P>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="column center-v marginAll marginAll1920">
+    <P class="t-title-m">Competitive audit report</P>
+    <div class="row center-v">
+      <div class="widthM">
+        <P class="t-title-s align-right"> Analyze findings</P>
+        <P class="t-title-s align-right">Summarize findings</P>
+
+      </div>
+      <div class="vertical-line"></div>
+      <div class=" columnNon widthM">
+        <P class="t-text-s"> Competitive audit goals</P>
+        <P class="t-text-s"> Who are your key competitors?</P>
+        <P class="t-text-s"> What are the type and quality of competitors’ products?</P>
+        <P class="t-text-s"> How do competitors position themselves in the market?</P>
+        <P class="t-text-s"> How do competitors talk about themselves?</P>
+        <P class="t-text-s"> Competitors’ strengths</P>
+        <P class="t-text-s"> Competitors’ weaknesses</P>
+        <P class="t-text-s"> Gaps</P>
+        <P class="t-text-s"> Opportunities</P>
+      </div>
+    </div>
+
+
+
+
 
   </div>
+
+
+
+
+
+
+
 
   <div class="bgColorAMRV">
     <div class="blankHXL"></div>
     <div class="blankHXL"></div>
-
-
-
     <div class="blankHL"></div>
-
   </div>
 
 
