--- a/architecture/index.html
+++ b/architecture/index.html
@@ -152,7 +152,7 @@
 
   <!--architecture 1-->
   <div id="ytrigger-arch">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
       <div class="vertical-line-blank">
       </div>
@@ -177,7 +177,7 @@
 
   <!--architecture 2-->
   <div id="ytrigger-arch2">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
@@ -197,7 +197,7 @@
   <div class="blankHXL"></div>
   <!--THESIS 3-->
   <div id="ytrigger-arch3">
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
       <div class="vertical-line-blank">
       </div>
@@ -218,7 +218,7 @@
   <div class="blankHXL"></div>
   <!--MANIFOLD GROUND 4-->
   <div id="ytrigger-arch4">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
       <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
         <p class="horizontal-line"></p>
@@ -239,7 +239,7 @@
   <!--RECOVERY OF RIVER EDGES 5-->
   <div id="ytrigger-arch5">
 
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
           src="./ar_03.jpg"></a>
       <div class="vertical-line-blank">
@@ -261,7 +261,7 @@
   <div class="blankHXL"></div>
   <!--CURVES 6-->
   <div id="ytrigger-arch6">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <a class="t-title-l" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
@@ -283,7 +283,7 @@
   <!--LACMA 7-->
   <div id="ytrigger-arch7">
 
-    <div class="row-change marginAll center-h center-v">
+    <div class="row-change marginAll marginAll1920 center-h center-v">
       <a class="t-title-l" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
       <div class="vertical-line-blank">
       </div>
@@ -303,7 +303,7 @@
 
   <!--architecture 8-->
   <div id="ytrigger-arch8">
-    <div class="row-change marginAll center-h center-v row-changeRV">
+    <div class="row-change marginAll marginAll1920 center-h center-v row-changeRV">
 
       <div class="column widthM">
         <p class="t-title-l" data-aos="fade-up">KAPPE HOUSE STUDY </p>
@@ -315,7 +315,10 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <img src="./ar_06.jpg">
+
+
+
+      <img class="widthMM" src="./ar_06.jpg">
     </div>
   </div>
 
