--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -114,17 +114,19 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll">
-    <div class="blank-lineheight-xl"></div>
+  <div class="blankPHONE"></div>
+  <div class="blankHXL"></div>
+
+  <div class="marginAll marginAll1920">
 
     <!--site -->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="row-change center-v">
+      <div class="column float">
         <img src="greylines.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank"> </div>
 
-      <div class="body-right  body-txt">
+      <div class="column">
         <p class="t-title-l">MANIFOLD GROUND</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Form finding from 2 dimensions to 3 dimensions</p>
@@ -133,79 +135,77 @@
 
     </div>
     <!--site -->
-    <br>
+    <div class="blankHL"></div>
+
+
     <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow">Methodology</p>
+    <div class="row item-height-m center-v ">
+      <p class="tArrow"> Methodology </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
     <!--diagram-->
-    <div class="body-h">
-      <div class="body-right body-txt">
+    <div class="column center-v">
+      <img src="object.jpg" alt="DIAGRAM" class="image">
+
+      <div class="column widthM">
         <P class="t-title-l"> 2D TO 3D</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Manipulation of 2 dimensional drawing to 3d dimension geometry </p>
       </div>
-      <div class="vertical-line-blank"></div>
-      <div class="body-left body-img float">
-        <img src="object.jpg" alt="DIAGRAM" class="image">
-      </div>
     </div>
     <!--diagram-->
-    <br>
+    <div class="blankHXL"></div>
     <!--geometry-->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="column center-v">
+      <div class="column float">
         <img src="model.jpg" alt="DIAGRAM" class="image">
       </div>
-      <div class="vertical-line-blank"></div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <P class="t-title-l">GEOMETRY ON SITE</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Transfer the geometry to site </p>
       </div>
     </div>
     <!--geometry-->
-    <br>
+    <div class="blankHXL"></div>
 
     <!--density-->
-    <div class="body-h">
-      <div class="body-right body-txt">
+    <div class="row-change center-v">
+      <div class="float">
         <p class="t-title-l">2D TO 3D MANIPULATION</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Cut and fold on both side of the bristol paper</p>
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="column float">
         <img src="cut.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--density-->
 
-
     <!-- content-->
-    <div class="content-tl">
+    <div class="row item-height-m center-v ">
       <p class="tArrow"> Site and Programs </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
     <!--site -->
-    <div class="body-h">
-      <div class="body-right  body-txt">
+    <div class="row-change center-v">
+      <div class="column">
         <p class="t-title-l">DIAGRAMS</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Programs including market, observation place, beer garden, etc. </p>
       </div>
       <div class="vertical-line-blank"> </div>
 
-      <div class="body-left body-img float">
+      <div class="column float">
         <img src="diagram.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--site -->
-    <br>
+    <div class="blankHXL"></div>
     <!-- content-->
     <div class="content-tl">
       <p class="tArrow"> Flyover View</p>
@@ -216,12 +216,12 @@
 
 
     <!--Section Perspective -->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="row-change center-v">
+      <div class="column float">
         <img src="render.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank"> </div>
-      <div class="body-right body-txt">
+      <div class="column ">
         <P class="t-title-l">FLYOVER VIEW</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">From the surrounding building people can see this build as an urban
@@ -229,17 +229,17 @@
       </div>
     </div>
     <!--Section Perspective -->
-    
     <!-- content-->
     <div class="content-tl">
-      <p class="tArrow"> Site </p>
+      <p class="tArrow"> Site</p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
 
+
     <!--Site -->
-    <div class="body-h">
-      <div class="body-right  body-txt">
+    <div class="row-change center-v">
+      <div class="column">
         <p class="t-title-l">SITE</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">This site is one of the most popular places in san Francisco. Along
@@ -249,20 +249,19 @@
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="column float">
         <img src="site1.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--Site -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
     <!--Site -->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="column center-v">
         <img src="site.jpg" alt="DIAGRAM" class="image">
-      </div>
-      <div class="vertical-line-blank"> </div>
-      <div class="body-right body-txt">
+        <div class="blankHM"></div>
+
+      <div class="column">
         <P class="t-title-l">SITE</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Site: 450 Hayes St. San Francisco, CA 94102</p>
@@ -270,7 +269,7 @@
       </div>
     </div>
     <!--Site -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
 
 
 
