--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -114,17 +114,18 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll">
+  <div class="blankPHONE"></div>
+  <div class="blankHXL"></div>
+  <div class="marginAll marginAll1920">
 
-    <div class="blank-lineheight-xl"></div>
 
     <!--diagram 1-->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="row-change center-v">
+      <div class="float">
         <img src="render.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank"></div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <P class="t-title-l">NARROW STRIPES</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Using a series of straps to divide the space that providing an
@@ -135,83 +136,85 @@
     <!--diagram 1-->
 
 
-
     <!-- content-->
-    <div class="content-tl">
+    <div class="row item-height-m center-v ">
       <p class="tArrow"> Programs and Diagrams </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <br>
+
+    <div class="blankHS"></div>
+
 
     <!--diagram 2-->
-    <div class="body-h">
-      <div class="body-right  body-txt marginAll">
+    <div class="row-change row-changeRV center-v">
+      <div class="column widthM">
         <p class="t-title-l">PROGRAMS</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Three categories of programs. Social and Leisure, Library, and
           miscellaneous</p>
       </div>
-      <div class="body-left body-img float">
+      <div class="column float">
         <img src="diagram.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--diagram 2-->
     <br>
 
+
     <!-- content-->
-    <div class="content-tl">
+    <div class="row item-height-m center-v ">
       <p class="tArrow"> Renders</p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
 
 
-
     <!--Section Perspective -->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="row-change center-v">
+      <div class="column float">
         <img src="render1.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <P class="t-title-l">RENDERS</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Multiple views</p>
       </div>
     </div>
     <!--Section Perspective -->
+
+
     <!-- content-->
-    <div class="content-tl">
+    <div class="row  item-height-m center-v ">
       <p class="tArrow"> Site and Floor Plan </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-
     <!--Plan-->
-    <div class="body-h">
-      <div class="body-right  body-txt">
+    <div class="row-change row-changeRV center-v">
+      <div class="column widthM">
         <p class="t-title-l">SITE PLAN</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Relationship between site and the infrastructure building</p>
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-left body-img float">
+      <div class="float">
         <img src="siteplan.jpg" alt="DIAGRAM" class="image">
       </div>
     </div>
     <!--Plan-->
     <div class="blank-lineheight-xl"></div>
     <!--Plan site-->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="row-change center-v">
+      <div class="column float">
         <img src="site.jpg" alt="DIAGRAM" class="image">
       </div>
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <p class="t-title-l"> SITE</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Location: Hyde Park, London</p>
