--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -114,8 +114,10 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll">
-    <div class="blank-lineheight-l"></div>
+  <div class="blankPHONE"></div>
+  <div class="blankHL"></div>
+  <div class="marginAll marginAll1920">
+
 
 
     <!--diagram 1-->
