--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -112,13 +112,15 @@
   </div>
   <!--head-->
   <span id="circle" class="circle"></span>
+  <div class="blankPHONE"></div>
+  <div class="blankHXL"></div>
+  <div class="blankHXL"></div>
 
-  <div class="marginAll">
-    <div class="blank-lineheight-xl"></div>
+  <div class="marginAll marginAll1920">
 
     <!-- cover -->
-    <div class="body-h">
-      <div class="body-left body-img float">
+    <div class="row-change">
+      <div class="column float">
         <svg width="893px" height="115px" viewBox="0 0 893 115" version="1.1"
           xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <title>Page 1</title>
@@ -197,25 +199,24 @@
       </div>
       <div class="vertical-line-blank"> </div>
 
-      <div class="body-right  body-txt">
+      <div class="column">
         <p class="t-title-l">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS
 
         </p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Thesis Studio</p>
       </div>
-
-
     </div>
     <!-- cover -->
-    <div class="blank-lineheight-xl"></div>
+    <div class="blankHXL"></div>
+    
     <!-- content-->
-    <div class="content-tl">
-      <p class="tArrow">Abstract
-      </p>
+    <div class="row item-height-m center-v">
+      <p class="tArrow"> Abstract </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
+
     <!--Abstract-->
     <div class="column">
 
@@ -458,12 +459,12 @@
     </div>
   </div>
   <!--video-->
-<!-- content-->
-<div class="content-tl marginAll">
-  <p class="tArrow"> Drawings of multiple scales </p>
-  <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-</div>
-<!-- content-->
+  <!-- content-->
+  <div class="content-tl marginAll">
+    <p class="tArrow"> Drawings of multiple scales </p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
 
 
 
@@ -481,123 +482,123 @@
   <!--Scale-->
   <div class="blank-lineheight-xl"></div>
 
-<!--Scale-->
-<div class="column marginAll">
-  <p class="t-title-l">DRAWING </p>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m">Mid-Scale</p>
+  <!--Scale-->
+  <div class="column marginAll">
+    <p class="t-title-l">DRAWING </p>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m">Mid-Scale</p>
+    <div class="blank-lineheight-m"></div>
+
+    <img src="methods1-1.png" alt="DIAGRAM" class="image float">
+  </div>
+  <!--Scale-->
+  <div class="blank-lineheight-xl"></div>
+
+  <!--Scale-->
+  <div class="column marginAll">
+    <P class="t-title-l">DRAWING </P>
+    <p class="t-text-m">Large-Scale</p>
+    <div class="blank-lineheight-m"></div>
+
+    <img src="methods2.png" alt="DIAGRAM" class="image">
+
+  </div>
+  <!--Scale-->
   <div class="blank-lineheight-m"></div>
 
-  <img src="methods1-1.png" alt="DIAGRAM" class="image float">
-</div>
-<!--Scale-->
-<div class="blank-lineheight-xl"></div>
+  <!--Scale-->
+  <div class="column marginAll">
 
-<!--Scale-->
-<div class="column marginAll">
-  <P class="t-title-l">DRAWING </P>
-  <p class="t-text-m">Large-Scale</p>
-  <div class="blank-lineheight-m"></div>
+    <P class="t-title-l">DRAWING </P>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m">Mid-Scale</p>
+    <div class="blank-lineheight-m"></div>
 
-  <img src="methods2.png" alt="DIAGRAM" class="image">
+    <img src="methods2-1.png" alt="DIAGRAM" class="image">
 
-</div>
-<!--Scale-->
-<div class="blank-lineheight-m"></div>
+  </div>
+  <!--Scale-->
+  <div class="blank-lineheight-l"></div>
 
-<!--Scale-->
-<div class="column marginAll">
+  <!--Scale-->
+  <div class="column marginAll">
+    <p class="t-title-l">DRAWING</p>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m">Mid-Scale</p>
+    <div class="blank-lineheight-m"></div>
+    <img src="methods3.png" alt="DIAGRAM" class="image">
+  </div>
+  <!--Scale-->
+  <div class="blank-lineheight-l"></div>
 
-  <P class="t-title-l">DRAWING </P>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m">Mid-Scale</p>
-  <div class="blank-lineheight-m"></div>
+  <!--Scale-->
+  <div class="column marginAll">
 
-  <img src="methods2-1.png" alt="DIAGRAM" class="image">
+    <p class="t-title-l">DRAWING </p>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m">Small-Scale</p>
+    <div class="blank-lineheight-m"></div>
 
-</div>
-<!--Scale-->
-<div class="blank-lineheight-l"></div>
+    <img src="methods3-1.png" alt="DIAGRAM" class="image">
+  </div>
+  <!--Scale-->
+  <div class="blank-lineheight-xl"></div>
+  <!-- content-->
+  <div class="content-tl marginAll">
+    <p class="tArrow"> Photo Documentation</p>
+    <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
+  </div>
+  <!-- content-->
+  <!--photos -->
+  <div class="column marginAll">
+    <P class="t-title-l">PHOTOS</P>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m"> Circulation</p>
+    <div class="blank-lineheight-m"></div>
+    <img src="photo1.png" alt="DIAGRAM" class="image float">
 
-<!--Scale-->
-<div class="column marginAll">
-  <p class="t-title-l">DRAWING</p>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m">Mid-Scale</p>
-  <div class="blank-lineheight-m"></div>
-  <img src="methods3.png" alt="DIAGRAM" class="image">
-</div>
-<!--Scale-->
-<div class="blank-lineheight-l"></div>
-
-<!--Scale-->
-<div class="column marginAll">
-
-  <p class="t-title-l">DRAWING </p>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m">Small-Scale</p>
-  <div class="blank-lineheight-m"></div>
-
-  <img src="methods3-1.png" alt="DIAGRAM" class="image">
-</div>
-<!--Scale-->
-<div class="blank-lineheight-xl"></div>
-<!-- content-->
-<div class="content-tl marginAll">
-  <p class="tArrow"> Photo Documentation</p>
-  <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-</div>
-<!-- content-->
-<!--photos -->
-<div class="column marginAll">
-  <P class="t-title-l">PHOTOS</P>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m"> Circulation</p>
-  <div class="blank-lineheight-m"></div>
-  <img src="photo1.png" alt="DIAGRAM" class="image float">
-
-</div>
-<!--photos -->
-<div class="blank-lineheight-xl"></div>
+  </div>
+  <!--photos -->
+  <div class="blank-lineheight-xl"></div>
 
 
-<!--photos -->
-<div class="column marginAll">
-  <p class="t-title-l">PHOTOS </p>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m">Structure </p>
-  <div class="blank-lineheight-m"></div>
+  <!--photos -->
+  <div class="column marginAll">
+    <p class="t-title-l">PHOTOS </p>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m">Structure </p>
+    <div class="blank-lineheight-m"></div>
 
-  <img src="photo2.png" alt="DIAGRAM" class="image float">
-</div>
-<!--photos -->
-<div class="blank-lineheight-xl"></div>
+    <img src="photo2.png" alt="DIAGRAM" class="image float">
+  </div>
+  <!--photos -->
+  <div class="blank-lineheight-xl"></div>
 
-<!--photos -->
-<div class="column marginAll">
+  <!--photos -->
+  <div class="column marginAll">
 
-  <P class="t-title-l">PHOTOS</P>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m">Surface</p>
-  <div class="blank-lineheight-m"></div>
-  <img src="photo3.png" alt="DIAGRAM" class="image">
+    <P class="t-title-l">PHOTOS</P>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m">Surface</p>
+    <div class="blank-lineheight-m"></div>
+    <img src="photo3.png" alt="DIAGRAM" class="image">
 
 
-</div>
-<!--photos -->
-<div class="blank-lineheight-xl"></div>
+  </div>
+  <!--photos -->
+  <div class="blank-lineheight-xl"></div>
 
-<!--photos -->
-<div class="column marginAll">
-  <p class="t-title-l">PHOTOS</p>
-  <p class="horizontal-line"></p>
-  <p class="t-text-m"> Perspective </p>
-  <div class="blank-lineheight-m"></div>
+  <!--photos -->
+  <div class="column marginAll">
+    <p class="t-title-l">PHOTOS</p>
+    <p class="horizontal-line"></p>
+    <p class="t-text-m"> Perspective </p>
+    <div class="blank-lineheight-m"></div>
 
-  <img src="photo4.png" alt="DIAGRAM" class="image float">
-</div>
-<!--photos -->
-<div class="blank-lineheight-xl"></div>
+    <img src="photo4.png" alt="DIAGRAM" class="image float">
+  </div>
+  <!--photos -->
+  <div class="blank-lineheight-xl"></div>
 
 
 
