--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blank-lineheight-xl"></div>
+
+  <div class="blankHXL"></div>
   <div class="body-landing">
     <div class="body-intro">
       <div class="t-hello">HELLO, </div>
@@ -789,7 +790,7 @@
 
     <div class="row-change">
       <div class="column alignCPH">
-        <div class="widthM">
+        <div class="widthM widthM1920">
           <div class="body-left t-title-l" data-aos="fade-up">
             EDUCATION </div>
           <div class="blank-lineheight-m"></div>
@@ -817,7 +818,7 @@
 
 
       <div class="column alignCPH">
-        <div class="widthM">
+        <div class="widthM widthM1920">
           <div class="body-left t-title-l" data-aos="fade-up">
             SKILL&TOOLS
           </div>
@@ -876,7 +877,7 @@
       </div>
 
       <div class="column alignCPH">
-        <div class="widthM">
+        <div class="widthM widthM1920">
           <div class="body-left t-title-l" data-aos="fade-up">
             EXPERIENCE </div>
           <div class="blank-lineheight-m"></div>
@@ -930,17 +931,12 @@
     <img src="./me.jpg" alt="right">
     <div class="centeredTQ">
       <p class=" tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
-      <p class=" t-text-m center-h" data-aos="fade-up">Learn more about my works &nbsp; <a
+      <p class="displayNonePhone t-text-m center-h" data-aos="fade-up">Learn more about my works &nbsp; <a
           class="textProject" href="/project">here</a> </p>
     </div>
   </div>
 
   <!-- about me-->
-
-
-
-
-
 
 
 
