--- a/project/index.html
+++ b/project/index.html
@@ -118,7 +118,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blankHXL"></div>
   <div class="body-landing">
     <div class="body-intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
